--- a/config.env
+++ b/config.env
@@ -1,29 +1,28 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5205314456:AAGxd4xQxVqIU4IrxirSp5YLpV_OQdkE6v8"
+GDRIVE_FOLDER_ID = "1fJ3Qzs4cjhv3-1Uafvxnuaj76OoPF9lt"
+OWNER_ID = 1126746691
+DOWNLOAD_DIR = "/usr/src/app/downloads"
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 8
+AUTO_DELETE_MESSAGE_DURATION = 20
+IS_TEAM_DRIVE = "true"
+TELEGRAM_API = 1677067
+TELEGRAM_HASH = "0d8c8aabe36b01db6a26a7f2780fa660"
+
 # OPTIONAL CONFIG
-GDRIVE_FOLDER_ID = ""
-IS_TEAM_DRIVE = ""
-DOWNLOAD_DIR = "/usr/src/app/downloads/"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
-AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+AUTHORIZED_CHATS = "-1001577132355"  # Split by space
+SUDO_USERS = ""  # Split by space
+IGNORE_PENDING_REQUESTS = "false"
+USE_SERVICE_ACCOUNTS = "true"
+INDEX_URL = "https://sathishsk.skmassking.workers.dev/0:/Sathish%20Bot/"
+STATUS_LIMIT = "4"  # Recommended limit is 4
+STOP_DUPLICATE = "true"
 CMD_INDEX = ""
-UPTOBOX_TOKEN = ""
+UPTOBOX_TOKEN = "997b72bfa6309eabec64d7b233a5cc098l3rk"
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "true"
 # Update
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
@@ -32,11 +31,11 @@ USER_SESSION_STRING = ""
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
-CUSTOM_FILENAME = ""
 DUMP_CHAT = ""
+CUSTOM_FILENAME = ""
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = ""
-SERVER_PORT = ""
+BASE_URL_OF_BOT = ""  # Required for Heroku
+SERVER_PORT = "80"  # Only for VPS
 WEB_PINCODE = ""
 # RSS
 RSS_DELAY = ""
@@ -44,17 +43,33 @@ RSS_COMMAND = ""
 RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""
 # Private Files
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
-MULTI_SEARCH_URL = ""
+ACCOUNTS_ZIP_URL = "https://sathishsk.skmassking.workers.dev/0:/Sathish%20Bot/accounts.zip"
+TOKEN_PICKLE_URL = "https://sathishsk.skmassking.workers.dev/0:/Sathish%20Bot/token.pickle"
+MULTI_SEARCH_URL = "https://gist.githubusercontent.com/sathishksk2/939d541750ed97bfcce404cd306981c1/raw/drive_folder"
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "1cBHlaKK"
+MEGA_EMAIL_ID = "sksk550387@gmail.com"
+MEGA_PASSWORD = "8489177893"
+# Shortener
+SHORTENER = ""
+SHORTENER_API = ""
+# GDTOT COOKIE
+CRYPT = "U3VQK1FtcTRsOFBldXlPa1RkQkVwZnhUSElzcDVDNFd1VEQrOUwyZm1vbz0%3D; PHPSESSID=tnc6ns0sj8u5dh6pr3dqr7oi7p; _gat_gtag_UA_130203604_4=1"
+# Size Limits
+TORRENT_DIRECT_LIMIT = ""
+ZIP_UNZIP_LIMIT = ""
+CLONE_LIMIT = ""
+MEGA_LIMIT = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "true"
+BUTTON_FOUR_NAME = ""
+BUTTON_FOUR_URL = ""
+BUTTON_FIVE_NAME = ""
+BUTTON_FIVE_URL = ""
+BUTTON_SIX_NAME = ""
+BUTTON_SIX_URL = ""
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
