--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5205314456:AAGxd4xQxVqIU4IrxirSp5YLpV_OQdkE6v8"
+BOT_TOKEN = "5471273907:AAHvXXWYlKcttZJTyTOBzERUxa6F6mjUHWc"
 GDRIVE_FOLDER_ID = "1fJ3Qzs4cjhv3-1Uafvxnuaj76OoPF9lt"
 OWNER_ID = 1126746691
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -21,7 +21,7 @@ STOP_DUPLICATE = "true"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = "997b72bfa6309eabec64d7b233a5cc098l3rk"
 TORRENT_TIMEOUT = ""
-EXTENSION_FILTER = ""
+EXTENSION_FILTER = "true"
 INCOMPLETE_TASK_NOTIFIER = "true"
 # Update
 UPSTREAM_REPO = ""
@@ -31,11 +31,11 @@ USER_SESSION_STRING = ""
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
-DUMP_CHAT = ""
+DUMP_CHAT = "-702434886"
 CUSTOM_FILENAME = ""
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = ""  # Required for Heroku
-SERVER_PORT = "80"  # Only for VPS
+BASE_URL_OF_BOT = "https://slam2-sathishksk2.koyeb.app"  # Required for Heroku
+SERVER_PORT = ""  # Only for VPS
 WEB_PINCODE = ""
 # RSS
 RSS_DELAY = ""
